Fix ioctl: added tx_rdy + rdy flag for right tx.

--- a/UART_controller/ctl.ucf
+++ b/UART_controller/ctl.ucf
@@ -1,9 +1,13 @@
-NET LED[0] LOC=H17
-NET LED[1] LOC=K15
-NET LED[2] LOC=J13
-NET LED[3] LOC=N14
-NET LED[4] LOC=R18
-NET LED[5] LOC=V17
-NET LED[6] LOC=U17
-NET LED[7] LOC=U16
-NET RX
+NET  "clk" LOC = E3 | IOSTANDARD = LVCMOS33;
+NET  "rst" LOC= N17 | IOSTANDARD = LVCMOS33;
+NET  "sw" LOC = J15 | IOSTANDARD = LVCMOS33;
+NET  "led[0]" LOC = H17 | IOSTANDARD = LVCMOS33;
+NET  "led[1]" LOC = K15 | IOSTANDARD = LVCMOS33;
+NET  "led[2]" LOC = J13 | IOSTANDARD = LVCMOS33;
+NET  "led[3]" LOC = N14 | IOSTANDARD = LVCMOS33;
+NET  "led[4]" LOC = R18 | IOSTANDARD = LVCMOS33;
+NET  "led[5]" LOC = V17 | IOSTANDARD = LVCMOS33;
+NET  "led[6]" LOC = U17 | IOSTANDARD = LVCMOS33;
+NET "led[7]" LOC = U16 | IOSTANDARD = LVCMOS33;
+NET "rx" LOC = C4 | IOSTANDARD = LVCMOS33;
+NET "tx" LOC = D4 | IOSTANDARD = LVCMOS33;
